--- a/src/app/shared/crud/delete-entity-dialog/delete-entity-dialog.component.html
+++ b/src/app/shared/crud/delete-entity-dialog/delete-entity-dialog.component.html
@@ -4,8 +4,9 @@
 			<!-- here can place a progress bar-->
 			<mat-progress-bar mode="indeterminate" *ngIf="viewLoading"></mat-progress-bar>
 		</div>
-		<div class="kt-portlet__head-label">
-			<h3 class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">{{data.title}}</h3>
+		<div class="kt-portlet__head-label flex">
+			<h3 class="w-11/12 text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">{{data.title}}</h3>
+			<button  class="w-1/12 " color="primary" (click)="onNoClick()" cdkFocusInitial [disabled]="viewLoading"><mat-icon class="mr-2 text-red-500">cancel</mat-icon></button>
 			<span class="kt-portlet__head-icon kt-hide">
 				<i class="la la-gear"></i>
 			</span>
@@ -21,7 +22,6 @@
 		</div>
 		<div class=" py-3 border-t kt-portlet__foot kt-portlet__no-border kt-portlet__foot--fit text-right">
 			<div class="kt-form__actions kt-form__actions--sm">
-				<button mat-button  class="button-red pull-left mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" (click)="onNoClick()"><mat-icon class="mr-2">cancel</mat-icon> Cancel</button>&nbsp;
 				<button  class="mat-focus-indicator mat-flat-button mat-button-base mat-primary" mat-raised-button color="primary" (click)="onYesClick()" cdkFocusInitial [disabled]="viewLoading"><mat-icon class="mr-2 text-white">delete_forever</mat-icon> Delete</button>
 			</div>
 		</div>
