--- a/src/app/modules/loan/cl-gl-scheme-crop-configuration/cl-gl-scheme-crop-configuration.component.html
+++ b/src/app/modules/loan/cl-gl-scheme-crop-configuration/cl-gl-scheme-crop-configuration.component.html
@@ -110,11 +110,11 @@
           </div>
         </div>
 
-        <div class="form-group kt-form__group row">
+        <div *ngIf="dataSource" class="form-group kt-form__group row">
           <div class="col-lg-12">
 
             <div class="mat-table__wrapper overflow-scroll " >
-              <mat-table 
+              <mat-table
               [style.height]="gridHeight"
                          #table
                          [dataSource]="dataSource | paginate: {itemsPerPage: size, currentPage: pageIndex,totalItems: length}"
@@ -173,7 +173,7 @@
 
             </div>
 
-            <div class="mat-table__bottom">
+            <div  class="mat-table__bottom">
               <pagination-controls class="my-pagination" (pageChange)="paginate($event)"></pagination-controls>
               <mat-select [(value)]="size" (valueChange)="paginate(pageIndex)" style="width: 50px;margin-left: 15px">
                 <mat-option [value]="5">5</mat-option>
