added upload document

--- a/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
@@ -196,6 +196,7 @@
     </div>
     <div class="col-lg-12 text-right py-4 border-t px-4">
 
+        <button mat-raised-button class="mr-2" color="primary" (click)="uploadDocuments()"><mat-icon class="mr-2">check_circle</mat-icon> Upload Documents</button>
         <button style="background-color: #01671B;" mat-raised-button class="mr-2" color="primary" (click)="SaveData()"><mat-icon class="mr-2">save</mat-icon> Save</button>
         <button mat-raised-button class="mr-2" color="primary" (click)="SubmitData()"><mat-icon class="mr-2">check_circle</mat-icon> Submit</button>
         <button mat-raised-button class="mr-2 mat-focus-indicator  btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" color="primary" (click)="clear()"><mat-icon class="mr-2"> clear_all</mat-icon>Clear</button>
