--- a/src/app/modules/loan/cl-customers/cl-customers.component.html
+++ b/src/app/modules/loan/cl-customers/cl-customers.component.html
@@ -22,7 +22,7 @@
                 </ngx-mat-select-search>
               </mat-option>
 
-              <mat-option *ngFor="let obj of AGPSLov" [value]="obj.Id">
+              <mat-option *ngFor="let obj of AGPSLov" [value]="obj.Value">
                 {{obj.Name}}
               </mat-option>
 
