--- a/src/app/modules/loan/cl-customers/cl-customers.component.html
+++ b/src/app/modules/loan/cl-customers/cl-customers.component.html
@@ -1,127 +1,119 @@
 <form [formGroup]="loanCustomerForm" class="kt-form kt-form--group-seperator-dashed">
-  <div class="kt-form">
-    <div class="kt-portlet__body">
-      <kt-alert *ngIf="hasFormErrors" type="warn" [duration]="30000" [showCloseButton]="true" (close)="onAlertClose($event)">
-        Please enter valid Input
-      </kt-alert>
-      <div class="form-group kt-form__group row">
-        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-            <mat-label class="customMatLabel">CNIC <strong class="matMandatory">*</strong></mat-label>
-            <input matInput placeholder="Enter CNIC" formControlName="CNIC" maxlength="13" appNumberOnly />
-            <mat-error *ngIf="hasError('CNIC', 'required')">CNIC<strong>required</strong></mat-error>
-          </mat-form-field>
+    <div class="kt-form">
+        <div class="kt-portlet__body">
+            <div class="form-group kt-form__group row">
+                <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label class="customMatLabel">CNIC <strong class="matMandatory">*</strong></mat-label>
+                        <input matInput placeholder="Enter CNIC" formControlName="CNIC" maxlength="13" appNumberOnly/>
+                        <mat-error *ngIf="hasError('CNIC', 'required')">CNIC<strong>required</strong></mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label class="customMatLabel">AGPS <strong class="matMandatory">*</strong></mat-label>
+                        <mat-select formControlName="AGPS" [(ngModel)]="agpsModel">
+                            <mat-option>
+                                <ngx-mat-select-search placeholderLabel="Search AGPS...">
+
+                                </ngx-mat-select-search>
+                            </mat-option>
+
+                            <mat-option *ngFor="let obj of AGPSLov" [value]="obj.Value">
+                                {{obj.Name}}
+                            </mat-option>
+
+                        </mat-select>
+                        <mat-error *ngIf="hasError('AGPS', 'required')">AGPS is <strong>required</strong></mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col-lg-4  col-sm-12 kt-margin-bottom-20-mobile">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label class="customMatLabel">Relationship <strong class="matMandatory">*</strong>
+                        </mat-label>
+                        <mat-select formControlName="Relationship" [(ngModel)]="relationshipModel">
+
+                            <mat-option>
+                                <ngx-mat-select-search placeholderLabel="Search Relationship...">
+
+                                </ngx-mat-select-search>
+                            </mat-option>
+
+                            <mat-option *ngFor="let obj of RelationshipLov" [value]="obj.Value">
+                                {{obj.Name}}
+                            </mat-option>
+
+                        </mat-select>
+                        <mat-error *ngIf="hasError('Relationship', 'required')">Relationship is
+                            <strong>required</strong></mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col-lg-12  kt-margin-bottom-20-mobile flex">
+                    <button class=" mb-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                            color="primary" (click)="attachCustomer()" type="button">
+                        <mat-icon class="mr-2">add</mat-icon>
+                        Attach
+                    </button>
+                    <a class=" mx-3 self-center cursor-pointer text-green" (click)="viewCustomer()">Search Cutomer </a>
+                </div>
+
+
+            </div>
+            <div class="form-group kt-form__group row">
+                <div class="col-lg-12">
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
+                            <tr class="table-header-background">
+                                <th>CNIC</th>
+                                <th>Name</th>
+                                <th>Father Name</th>
+                                <th>DOB</th>
+                                <th>AGPS</th>
+                                <th>Relationship</th>
+                                <th>Actions</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr *ngFor="let customer of loan_data; let i = index;">
+                                <td>
+                                    {{customer.Cnic}}
+                                </td>
+                                <td>
+                                    {{customer.CustomerName}}
+                                </td>
+                                <td>
+                                    {{customer.FatherName}}
+                                </td>
+                                <td>
+                                    {{customer.DOB | date}}
+                                </td>
+                                <td>
+                                    {{returnKeyValuePair(customer.Agps, 'agps')}}
+                                </td>
+                                <td>
+                                    {{returnKeyValuePair(customer.RelationID, 'relation')}}
+                                </td>
+                                <td style="cursor:pointer;" (click)="deleteRow(customer,i)">
+                                    <p style="color:orange;">Delete</p>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+            </div>
+            <div class="form-group kt-form__group row">
+                <div class="col-lg-3 mt-1p">
+                    <button style="background-color: #01671B;" type="button" class="btn btn-primary" mat-raised-button
+                            color="primary" (click)="onSaveCustomer()">
+                        <mat-icon class="mr-2">save</mat-icon>
+                        Save
+                    </button>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-            <mat-label class="customMatLabel">AGPS <strong class="matMandatory">*</strong></mat-label>
-            <mat-select formControlName="AGPS" [(ngModel)]="agpsModel">
-              <mat-option>
-                <ngx-mat-select-search placeholderLabel="Search AGPS...">
-
-                </ngx-mat-select-search>
-              </mat-option>
-
-              <mat-option *ngFor="let obj of AGPSLov" [value]="obj.Value">
-                {{obj.Name}}
-              </mat-option>
-
-            </mat-select>
-            <mat-error *ngIf="hasError('AGPS', 'required')">AGPS is <strong>required</strong></mat-error>
-          </mat-form-field>
-        </div>
-        <div class="col-lg-4  col-sm-12 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-            <mat-label class="customMatLabel">Relationship <strong class="matMandatory">*</strong></mat-label>
-            <mat-select formControlName="Relationship" [(ngModel)]="relationshipModel">
-
-              <mat-option>
-                <ngx-mat-select-search placeholderLabel="Search Relationship...">
-
-                </ngx-mat-select-search>
-              </mat-option>
-
-              <mat-option *ngFor="let obj of RelationshipLov" [value]="obj.Id">
-                {{obj.Name}}
-              </mat-option>
-
-            </mat-select>
-            <mat-error *ngIf="hasError('Relationship', 'required')">Relationship is <strong>required</strong></mat-error>
-          </mat-form-field>
-        </div>
-        <div class="col-lg-12  kt-margin-bottom-20-mobile flex">
-          <button class=" mb-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" color="primary" (click)="searchCustomer()" type="button"><mat-icon class="mr-2">add</mat-icon> Attach</button>
-          <!--<button type="button" class="btn btn-primary mt-10p" mat-raised-button color="primary" >
-            Search
-          </button>-->
-            <a  class=" mx-3 self-center cursor-pointer text-green" (click)="viewCustomer()">Search Cutomer </a>
-        </div>
-
-
-      </div>
-      <div class="form-group kt-form__group row">
-
-        <div class="col-lg-2"></div>
-      </div>
-      <div class="form-group kt-form__group row">
-        <div class="col-lg-12">
-          <div class="table-responsive">
-            <table class="table table-striped">
-              <thead>
-                <tr class="table-header-background">
-                  <th>CNIC</th>
-                  <th>Name</th>
-                  <th>Father Name</th>
-                  <th>DOB</th>
-                  <th>AGPS</th>
-                  <th>Relationship</th>
-                  <th>Actions</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let customer of customerArray; let i = index;">
-                  <td>
-                    {{customer.cnic}}
-                  </td>
-                  <td>
-                    {{customer.name}}
-                  </td>
-                  <td>
-                    {{customer.fatherName}}
-                  </td>
-                  <td>
-                    {{customer.dob}}
-                  </td>
-                  <td>
-                    {{customer.agpsName}}
-                  </td>
-                  <td>
-                    {{customer.RelationshipName}}
-                  </td>
-                  <td style="cursor:pointer;" (click)="deleteRow(customer,i)">
-                    <p style="color:orange;">Delete</p>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-
-        </div>
-      </div>
-      <div class="form-group kt-form__group row">
-        <div class="col-lg-3 mt-1p">
-          <button style="background-color: #01671B;" type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSaveCustomer()">
-            <mat-icon class="mr-2">save</mat-icon> Save
-          </button>
-        </div>
-      </div>
     </div>
-  </div>
 </form>
 
-<!-- <ngx-spinner bdColor="rgba(51,51,51,0.8)"
-             size="medium"
-             color="#ecbd00"
-             type="ball-scale-multiple">
-  <p style="font-size: 20px; color: white">Loading...</p>
-</ngx-spinner> -->
