Loan Utilizaton bugs fixed

--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -24,7 +24,7 @@
     <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <div class="flex" style="flex-wrap: wrap;" [formGroup]="utilizationSearch">
-                <app-zone-branch-circle [form]="utilizationSearch" [should_show_circle]="false"
+                <app-zone-branch-circle [form]="utilizationSearch" [should_show_circle]="true"
                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                 <div class="mx-2">
