--- a/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
@@ -9,13 +9,13 @@
 
     <div class="" [formGroup]="mrForm">
 
-        <div class="row" style="flex-wrap: wrap;">
+        <div class="flex" style="flex-wrap: wrap;">
             <app-zone-branch-circle [form]="mrForm" [should_show_circle]="false"
                                     (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
-            <div>
-        <div class="row">
-            <div class="col-lg-4 col-sm-12">
-                <div>
+
+
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
 
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Transaction Date</mat-label>
@@ -23,54 +23,50 @@
                       </mat-form-field>
                 </div>
             </div>
-        </div>
 
 
-        <div class="row">
-            <div class="col-lg-4 col-sm-12 flex">
-                <div  class="w-8/12">
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+
+
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                    <mat-form-field class="mat-form-field-fluid w-6/12" appearance="outline">
                         <mat-label class="customMatLabel">LC# <strong class="matMandatory">*</strong></mat-label>
                         <input matInput placeholder="Enter Loan Case No" formControlName="Lcno"  maxlength="13" autocomplete="off" appNumberOnly />
                     </mat-form-field>
-                </div>
-                <div class="w-3/12">
-                    <input type="button" mat-raised-button color="primary" class=" mx-2 mt-3 mat-raised-button mat-button-base mat-primary searchLCBtn" (click)="subProposal()" value="Search"/>
+                    <input type="button" mat-raised-button color="primary" class="w-5/12 ml-1 w-full mat-raised-button mat-button-base mat-primary searchLCBtn" (click)="subProposal()" value="Search"/>
                 </div>
             </div>
 
 
-        </div>
-
-        <div class="row">
-            <div *ngIf="!expand" class="col-lg-4 col-sm-12">
-                <div>
+            <div *ngIf="!expand" class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Sub Proposal <strong class="matMandatory">*</strong></mat-label>
                         <mat-select formControlName="LoanAppSanctionID">
-                          <mat-option *ngFor="let sub of SubProposalGLList" [value]="sub.LoanAppSanctionID" (click)="Disbursement(sub.LoanAppSanctionID)">
-                            {{sub.Description}}
-                          </mat-option>
-                        </mat-select>
-                      </mat-form-field>
-                </div>
-            </div>
-            <div *ngIf="expand" class="col-lg-5 col-sm-12">
-                <div>
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label class="customMatLabel">Sub Proposal <strong class="matMandatory">*</strong></mat-label>
-                        <mat-select formControlName="LoanAppSanctionID">
-                          <mat-option *ngFor="let sub of SubProposalGLList" [value]="sub.LoanAppSanctionID" (click)="Disbursement(sub.LoanAppSanctionID)">
-                            {{sub.Description}}
-                          </mat-option>
+                            <mat-option *ngFor="let sub of SubProposalGLList" [value]="sub.LoanAppSanctionID" (click)="Disbursement(sub.LoanAppSanctionID)">
+                                {{sub.Description}}
+                            </mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4 col-sm-12">
-                <div>
+
+            <div *ngIf="!expand" class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label class="customMatLabel">Sub Proposal <strong class="matMandatory">*</strong></mat-label>
+                        <mat-select formControlName="LoanAppSanctionID">
+                            <mat-option *ngFor="let sub of SubProposalGLList" [value]="sub.LoanAppSanctionID" (click)="Disbursement(sub.LoanAppSanctionID)">
+                                {{sub.Description}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+            </div>
+
+
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Disbursement <strong class="matMandatory">*</strong></mat-label>
                         <mat-select formControlName="LoanDisbID">
@@ -81,79 +77,74 @@
                       </mat-form-field>
                 </div>
             </div>
-        </div>
 
 
 
-        <div class="row">
-            <div class="col-lg-4 col-sm-12 flex">
-                <div class="w-8/12">
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+
+
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                    <mat-form-field class="mat-form-field-fluid w-6/12" appearance="outline">
                         <mat-label class="customMatLabel">New Gl Code<strong class="matMandatory">*</strong></mat-label>
                         <input matInput placeholder="Enter New Gl Code" formControlName="GlSubIDNew"  maxlength="13" autocomplete="off" />
                       </mat-form-field>
-                </div>
+                    <input type="button" mat-raised-button color="primary" class="w-full ml-1 w-5/12 mat-raised-button mat-button-base mat-primary searchLCBtn" (click)="newGlDialog()" value="Search"/>
 
-                <div class="w-3/12">
-                    <input type="button" mat-raised-button color="primary" class=" mx-2 mt-3  mat-raised-button mat-button-base mat-primary searchLCBtn" (click)="newGlDialog()" value="Search"/>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-12 ">
-                <div >
+
+
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">New Scheme Code</mat-label>
                         <input matInput placeholder="Enter New Scheme Code" formControlName="SchemeCode"  maxlength="10" autocomplete="off" />
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">New Crop Code</mat-label>
                         <input matInput placeholder="Enter New Corp Code" formControlName="CropCode"  maxlength="10" autocomplete="off" />
                     </mat-form-field>
                 </div>
             </div>
-        </div>
 
 
 
-
-
-        <div class="row">
-            <div class="col-lg-4 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Down Payment (%) <strong class="matMandatory">*</strong></mat-label>
                         <input matInput placeholder="Enter Down Payment" formControlName="AmountPayableForReschPer"  maxlength="5" autocomplete="off" />
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Grace Days(1st Installment)</mat-label>
                         <input matInput placeholder="Enter Manager Grace Days" formControlName="ProposalID" readonly="readonly" maxlength="13" autocomplete="off" />
                       </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Mark-UP Installment (%)</mat-label>
                         <input matInput placeholder="Enter Mark-UP Installment" formControlName="OutSDMarkupWithIstInstPer" readonly="readonly" maxlength="13" autocomplete="off" />
                     </mat-form-field>
                 </div>
             </div>
-        </div>
 
 
 
 
-        <div class="row">
-            <div class="col-lg-4 col-sm-12">
 
-                <div>
+
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">Resch Type <strong class="matMandatory">*</strong></mat-label>
                                         <mat-select formControlName="RescheduleTypeID">
@@ -164,19 +155,19 @@
                     </mat-form-field>
                 </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="col-lg-12 col-sm-12">
-                <div>
+
+
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 465px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Remarks<strong class="matMandatory">*</strong></mat-label>
                         <input matInput placeholder="Enter Remarks" formControlName="Remarks" autocomplete="off" />
                       </mat-form-field>
                 </div>
             </div>
-        </div>
 
+            </div>
 
 
 
@@ -193,8 +184,8 @@
 
 
 
-    </div>
-    <div class="col-lg-12 text-right py-4 border-t px-4">
+
+    <div class="col-lg-12 text-right py-2 border-t px-4">
 
         <button mat-raised-button class="mr-2" color="primary" (click)="uploadDocuments()"><mat-icon class="mr-2">check_circle</mat-icon> Upload Documents</button>
         <button style="background-color: #01671B;" mat-raised-button class="mr-2" color="primary" (click)="SaveData()"><mat-icon class="mr-2">save</mat-icon> Save</button>
@@ -240,4 +231,6 @@
 
             </div>
 
+
+    </div>
 </div>
