--- a/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
 
-            <div *ngIf="!expand" class="mx-2">
+            <div *ngIf="expand" class="mx-2">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Sub Proposal <strong class="matMandatory">*</strong></mat-label>
