--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -125,6 +125,11 @@
                             <mat-cell *matCellDef="let loanutilization">{{loanutilization.Lat}}</mat-cell>
                         </ng-container>
 
+                        <ng-container matColumnDef="AddedOn">
+                            <mat-header-cell *matHeaderCellDef mat-sort-header>Added On</mat-header-cell>
+                            <mat-cell *matCellDef="let loanutilization">{{loanutilization.CreatedDate}}</mat-cell>
+                        </ng-container>
+
 
                         <ng-container matColumnDef="Actions">
                             <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
