--- a/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
@@ -183,19 +183,24 @@
 
 
 
-
-
-    <div class="col-lg-12 text-right py-2 border-t px-4">
+<div class="row">
+    <div class="col-lg-12 text-right py-2 border-t">
 
         <button mat-raised-button class="mr-2" color="primary" (click)="uploadDocuments()"><mat-icon class="mr-2">check_circle</mat-icon> Upload Documents</button>
         <button style="background-color: #01671B;" mat-raised-button class="mr-2" color="primary" (click)="SaveData()"><mat-icon class="mr-2">save</mat-icon> Save</button>
         <button mat-raised-button class="mr-2" color="primary" (click)="SubmitData()"><mat-icon class="mr-2">check_circle</mat-icon> Submit</button>
         <button mat-raised-button class="mr-2 mat-focus-indicator  btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" color="primary" (click)="clear()"><mat-icon class="mr-2"> clear_all</mat-icon>Clear</button>
-        <button mat-raised-button class="mr-4 mat-focus-indicator  btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" color="primary" (click)="cancelTransaction()"><mat-icon class="mr-2">cancel</mat-icon>Cancel Transaction</button>
-        <span id="llcInquiryText" class="mr-4"  [routerLink]="['/reschedule-cases/pending-reschedule']"><b>Pending List</b></span>
-        <span id="llcInquiryText" class="mr-4" [routerLink]="['/reschedule-cases/refer-back-reschedule']"><b>Referback List</b></span>
-        <span style="color: #01671B;" class="cursor-pointer" id="llcInqiryText" (click)="viewLCInquiry()"><b>View LC Inquiry</b></span>
+        <button mat-raised-button class=" mat-focus-indicator  btn bg-red-500 text-white rounded-md ml-2 mat-raised-button mat-button-base mat-danger" color="primary" (click)="cancelTransaction()"><mat-icon class="mr-2">cancel</mat-icon>Cancel Transaction</button>
+
     </div>
+</div>
+        <div class="row">
+            <div class="col-lg-12 text-right py-2">
+                <span id="llcInquiryText" class="mr-4"  [routerLink]="['/reschedule-cases/pending-reschedule']"><b>Pending List</b></span>
+                <span id="llcInquiryText" class="mr-4" [routerLink]="['/reschedule-cases/refer-back-reschedule']"><b>Referback List</b></span>
+                <span style="color: #01671B;" class="cursor-pointer" id="llcInqiryText" (click)="viewLCInquiry()"><b>View LC Inquiry</b></span>
+            </div>
+        </div>
 
             <div class="col-lg-12">
                 <div class="table-responsive">
