--- a/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
@@ -196,8 +196,8 @@
 </div>
         <div class="row">
             <div class="col-lg-12 text-right py-2">
-                <span id="llcInquiryText" class="mr-4"  [routerLink]="['/reschedule-cases/pending-reschedule']"><b>Pending List</b></span>
-                <span id="llcInquiryText" class="mr-4" [routerLink]="['/reschedule-cases/refer-back-reschedule']"><b>Referback List</b></span>
+                <span id="llcInquiryText" class="mr-4 cursor-pointer"  [routerLink]="['/reschedule-cases/pending-reschedule']"><b>Pending List</b></span>
+                <span id="llcInquiryText" class="mr-4 cursor-pointer" [routerLink]="['/reschedule-cases/refer-back-reschedule']"><b>Referback List</b></span>
                 <span style="color: #01671B;" class="cursor-pointer" id="llcInqiryText" (click)="viewLCInquiry()"><b>View LC Inquiry</b></span>
             </div>
         </div>
