--- a/src/app/modules/reschedule-cases/make-reschedule/upload-documents/upload-documents.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/upload-documents/upload-documents.component.html
@@ -192,7 +192,7 @@
                                                 <mat-form-field class="mat-form-field-fluid w-full"
                                                                 appearance="outline">
                                                     <mat-label class="customMatLabel">Page No</mat-label>
-                                                    <input matInput formControlName="PageNumber">
+                                                    <input matInput formControlName="PageNumber" id="page_{{i}}">
                                                 </mat-form-field>
                                             </div>
                                         </div>
@@ -203,7 +203,8 @@
                                                 <mat-form-field class="mat-form-field-fluid w-full"
                                                                 appearance="outline">
                                                     <mat-label class="customMatLabel">Description</mat-label>
-                                                    <input matInput formControlName="DescriptionTab">
+                                                    <input matInput formControlName="DescriptionTab"
+                                                           id="description_{{i}}">
                                                 </mat-form-field>
                                             </div>
                                         </div>
