--- a/src/app/modules/loan-recover/loan-inquiry/loan-inquiry.component.html
+++ b/src/app/modules/loan-recover/loan-inquiry/loan-inquiry.component.html
@@ -1,54 +1,57 @@
 <div class="px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
   <div class="text-3xl mt-3 font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Loan Case Inquiry</div>
+
+    <div class="collapse show" id="collapseExample">
+        <div class="card card-body">
+            <div class="py-2" [formGroup]="RecoveryForm">
+                <div class="flex" style="flex-wrap: wrap;">
+                    <app-zone-branch-circle [form]="RecoveryForm" [should_show_circle]="false"
+                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+
+                    <div class="mx-2">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+
+                            <mat-form-field class="mat-form-field-fluid w-full " appearance="outline">
+                                <mat-label class="customMatLabel">LA File/Booklet #</mat-label>
+                                <input matInput placeholder="Enter Transaction Id" formControlName="TransactionId" maxlength="30" autocomplete="off" />
+                                <mat-error *ngIf="hasError('TransactionId', 'required')">LA File/Booklet # <strong>required</strong></mat-error>
+                            </mat-form-field>
+                        </div>
+                    </div>
+
+
+                    <div class="mx-2">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                            <mat-form-field class="mat-form-field-fluid  w-full" appearance="outline">
+                                <mat-label class="customMatLabel">Loan Case #</mat-label>
+                                <input matInput placeholder="Enter Loan Case #" formControlName="LoanCaseNo" maxlength="30" autocomplete="off" />
+                                <mat-error *ngIf="hasError('LoanCaseNo', 'required')">Loan Case # <strong>required</strong></mat-error>
+                            </mat-form-field>
+                        </div>
+                    </div>
+
+
+                    <div class="mx-2">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                            <button class="bg-gray-500" (click)="find()"  mat-flat-button [color]="'primary'">
+                                <mat-icon class="mr-2">search</mat-icon>Search
+                            </button>
+                        </div>
+                    </div>
+
+
+                </div>
+
+
+                <div class="row">
+
+
+                </div>
+            </div>
+        </div>
+    </div>
   <!-- Header -->
-  <div class="pt-2"
-  [formGroup]="RecoveryForm">
 
-  <div class="row">
-    <div class="col-lg-3 col-sm-12">
-      <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-        <mat-label class="customMatLabel">Zone <strong class="matMandatory">*</strong></mat-label>
-        <input matInput placeholder="Enter Zone" formControlName="Zone" readonly="readonly" maxlength="30" autocomplete="off" />
-      </mat-form-field>
-    </div>
-    <div class="col-lg-3 col-sm-12">
-      <mat-form-field class="mat-form-field-fluid  w-full " appearance="outline">
-        <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-        <input matInput placeholder="Enter Branch" formControlName="Branch" readonly="readonly" maxlength="30" autocomplete="off" />
-      </mat-form-field>
-    </div>
-    <div class="col-lg-3 col-sm-12">
-      <mat-form-field class="mat-form-field-fluid w-full " appearance="outline">
-        <mat-label class="customMatLabel">LA File/Booklet #</mat-label>
-        <input matInput placeholder="Enter Transaction Id" formControlName="TransactionId" maxlength="30" autocomplete="off" />
-        <mat-error *ngIf="hasError('TransactionId', 'required')">LA File/Booklet # <strong>required</strong></mat-error>
-      </mat-form-field>
-    </div>
-    <div class="col-lg-3 col-sm-12">
-
-    <mat-form-field class="mat-form-field-fluid  w-full" appearance="outline">
-      <mat-label class="customMatLabel">Loan Case #</mat-label>
-      <input matInput placeholder="Enter Loan Case #" formControlName="LoanCaseNo" maxlength="30" autocomplete="off" />
-      <mat-error *ngIf="hasError('LoanCaseNo', 'required')">Loan Case # <strong>required</strong></mat-error>
-    </mat-form-field>
-    </div>
-
-</div>
-
-
-
-  <div class="row">
-
-    <div class="col-lg-3 col-sm-12">
-    <div class="flex flex-shrink-0 items-center mt-1 sm:mt-0 mb-2">
-      <button class="bg-gray-500" (click)="find()"  mat-flat-button [color]="'primary'">
-        <mat-icon class="mr-2">search</mat-icon>Search
-      </button>
-    </div>
-    </div>
-
-</div>
-  </div>
 
   <!-- Main -->
   <div class="flex flex-auto overflow-y-scroll">
