--- a/src/app/modules/journal-voucher/search-jv-pending/search-jv-pending.component.html
+++ b/src/app/modules/journal-voucher/search-jv-pending/search-jv-pending.component.html
@@ -6,7 +6,7 @@
         <div class="col-lg-9 col-sm-12">
             <div class="heading">Pending Transactions</div>
         </div>
-        <div class="col-lg-3 col-sm-12 self-center mt-2">
+        <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
                 <button class="mt-1  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
                         color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
