--- a/src/app/modules/journal-voucher/search-jv/search-jv.component.html
+++ b/src/app/modules/journal-voucher/search-jv/search-jv.component.html
@@ -103,7 +103,7 @@
 
 
 
-    <div class="flex flex-auto" style="flex-direction: column;overflow-y: scroll">
+    <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50  " style="flex-direction: column;overflow-y: scroll">
         <div class="example-table-container">
             <mat-table
                        #table
