--- a/src/app/modules/loan/customer-list/cust-list.component.html
+++ b/src/app/modules/loan/customer-list/cust-list.component.html
@@ -19,7 +19,7 @@
                 </button>
                 <button *ngIf="data?.flag==1" (click)="onNoClick()" class="mt-2 text-danger-500" mat-icon-button
                         style="float:right">
-                    <mat-icon>cancel</mat-icon>
+                    <mat-icon class="text-danger">cancel</mat-icon>
                 </button>
             </p>
         </div>
