--- a/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
+++ b/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
@@ -12,7 +12,7 @@
     <div class="flex flex-auto overflow-y-scroll overflow-x-hidden" style="flex-direction: column;">
       <div class="flex flex-col flex-auto sm:mb-6 overflow-x-hidden sm:overflow-y-auto">
         <div class="kt-portlet__head-label">
-          <h5 class="kt-portlet__head-title" style="font-size: 18px !important;">Income</h5>
+          <h5 class="heading">Income</h5>
         </div>
         <table class="table table-striped">
           <thead>
@@ -39,7 +39,7 @@
         </table>
 
         <div class="kt-portlet__head-label">
-          <h5 class="kt-portlet__head-title" style="font-size: 18px !important;">Liabilities</h5>
+          <h5 class="heading">Liabilities</h5>
         </div>
 
         <table class="table table-striped">
@@ -66,12 +66,12 @@
           </tbody>
         </table>
         <div class="row">
-          <div class="col-lg-3 mt-1p ml-1p mb-1p">
-            <button type="button"  (click)="saveLoanDbr()" class="btn btn-primary" mat-raised-button color="primary">
-              Save
+          <div class="col-lg-12 mt-1p ml-1p mb-1p">
+            <button type="button"  (click)="saveLoanDbr()" class="btn btn-primary bg-green" mat-raised-button color="primary">
+              <mat-icon class="mr-2">save</mat-icon>Save
             </button>
-            <button type="button" class="btn btn-outline-brand ml-1p" mat-raised-button color="danger">
-              Close
+            <button type="button" class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button color="danger">
+              <mat-icon class="mr-2">cancel</mat-icon>Close
             </button>
           </div>
         </div>
