--- a/src/app/modules/loan/cl-application-header/cl-application-header.component.html
+++ b/src/app/modules/loan/cl-application-header/cl-application-header.component.html
@@ -130,7 +130,7 @@
   </div>
 </form>
 <div class="form-group kt-form__group row pt-2 ml-0.5">
-  <div class="col-lg-12">
+  <div class="col-lg-12 pl-1">
     <button style="background-color: #01671B;" [disabled]="isSaveApplicationHeaderInProgress" type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSaveApplicationHeader()">
       <mat-icon class="mr-2">save</mat-icon> Save
     </button>
