--- a/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
+++ b/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
@@ -78,7 +78,7 @@
                 </mat-form-field>
             </div>
             <div class="col-lg-3 col-sm-12">
-                <button style="background-color: #01671B;" type="button" class="mt-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="saveLoanDocuments()"><mat-icon class="mr-2">save</mat-icon> Save</button>
+                <button  type="button" class="mt-2 bg-green mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="saveLoanDocuments()"><mat-icon class="mr-2">save</mat-icon> Save</button>
 
             </div>
 
