--- a/src/app/modules/loan/search-dbr/search-dbr.component.html
+++ b/src/app/modules/loan/search-dbr/search-dbr.component.html
@@ -3,11 +3,11 @@
   <!-- Header -->
 
   <!-- Main -->
-  <div class="flex flex-auto overflow-y-scroll">
+  <div class="flex flex-auto overflow-y-scroll overflow-x-hidden">
 
     <!-- Products list -->
-    <div class="flex flex-auto overflow-hidden" style="flex-direction: column;">
-      <div class="flex flex-col flex-auto sm:mb-6 overflow-scroll sm:overflow-y-auto">
+    <div class="flex flex-auto overflow-scroll overflow-x-hidden" style="flex-direction: column;">
+      <div class="flex flex-col flex-auto sm:mb-6 overflow-scroll sm:overflow-y-auto border shadow-xs rounded-sm bg-gray-50 " >
         <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
           matSortActive="id" matSortDirection="asc" matSortDisableClear>
 
