--- a/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
@@ -184,7 +184,7 @@
 
 
 <div class="row">
-    <div class="col-lg-12 text-right py-2 border-t">
+    <div class="col-lg-12  py-2 border-t">
 
         <button mat-raised-button class="mr-2" color="primary" (click)="uploadDocuments()"><mat-icon class="mr-2">check_circle</mat-icon> Upload Documents</button>
         <button style="background-color: #01671B;" mat-raised-button class="mr-2" color="primary" (click)="SaveData()"><mat-icon class="mr-2">save</mat-icon> Save</button>
