--- a/src/app/modules/reschedule-cases/make-reschedule/upload-documents/upload-documents.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/upload-documents/upload-documents.component.html
@@ -31,17 +31,16 @@
                                                 (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                         <div class="mx-2">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-                                <mat-form-field class="w-6/12 mat-form-field-fluid w-full" appearance="outline">
-                                    <mat-label class="customMatLabel">Loancase NO: <strong
-                                        class="matMandatory">*</strong>
+                                <mat-form-field style="width: 150px;" class=" mat-form-field-fluid" appearance="outline">
+                                    <mat-label class="customMatLabel">Loancase NO: <strong class="matMandatory">*</strong>
                                     </mat-label>
                                     <input matInput formControlName="LcNo" readonly>
                                     <mat-error *ngIf="hasError('DocumentRefNo', 'required')">LcNo
                                         <strong>required</strong>
                                     </mat-error>
                                 </mat-form-field>
-                                <input type="button" mat-raised-button color="primary"
-                                       class="  mx-2 w-5/12 mat-raised-button mat-button-base mat-primary searchLCBtn"
+                                <input style="width: 50px;" type="button" mat-raised-button color="primary"
+                                       class="ml-2 w-5/12 mat-raised-button mat-button-base mat-primary searchLCBtn"
                                        (click)="loanCase()" value="Search"/>
                             </div>
 
