--- a/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
+++ b/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
@@ -134,8 +134,8 @@
 
 
 
-    <div class="mb-3" style="flex-direction: column; overflow-y: scroll">
-        <table class="example-table-container">
+    <div class="mb-3" style="flex-direction: column; overflow-y: scroll ">
+        <table class="example-table-container  border shadow-xs rounded-sm bg-gray-50">
             <thead>
             <tr class="table-header-background p-5 ">
                 <th>LC#</th>
