--- a/src/app/modules/reschedule-cases/search-rc/search-rc.component.html
+++ b/src/app/modules/reschedule-cases/search-rc/search-rc.component.html
@@ -86,7 +86,7 @@
 
     <!-- Header -->
 
-    <div class="flex flex-auto" style="flex-direction: column;overflow-y: scroll">
+    <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50 "  style="flex-direction: column;overflow-y: scroll">
         <mat-table class="example-table-container"
                    #table
                    [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems}"
