--- a/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
@@ -168,7 +168,7 @@
 
         </div>
 
-        <div class="mt-2 justify-content-end text-right border-t py-4" *ngIf="is_view">
+        <div class="mt-2  border-t py-4" *ngIf="is_view">
             <button mat-raised-button color="primary" *ngIf="isAdd && !updatingCase" class="mr-4" (click)="Add()">
                 <mat-icon class="mr-2">add_circle</mat-icon>
                 Add
