--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -106,7 +106,7 @@
         <!-- Products list -->
         <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50 overflow-scroll"
              style="flex-direction: column;">
-            <div class="flex flex-col flex-auto sm:mb-2  overflow-scroll" [style.height]="gridHeight">
+            <div class="flex flex-col flex-auto  overflow-scroll" [style.height]="gridHeight">
                 <mat-table class="lmat-elevation-z8"
                            #table
                            [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems}"
