--- a/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
+++ b/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
@@ -6,7 +6,7 @@
 
 
     <!-- Header -->
-    <div class="flex flex-auto px-0" style="flex-direction: column; ">
+    <div class="flex flex-auto mt-2  px-0" style="flex-direction: column; ">
         <div>
 
 
